fix lost focus issue on mobile close button

--- a/source/_patterns/03-organisms/headers/wwu-header/_wwu-header.scss
+++ b/source/_patterns/03-organisms/headers/wwu-header/_wwu-header.scss
@@ -115,11 +115,8 @@
       right: 0;
     }
 
+    &:hover,
     &:focus {
-      background: transparent;
-    }
-
-    &:hover {
       color: $darkest-blue;
       background: $lightest-green;
       box-shadow: none;
